--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5658,7 +5658,7 @@ a.close.disabled {
 
 .carousel-indicators {
   position: absolute;
-  right: 0;
+  /*  right: 0;*/
   bottom: 0;
   left: 0;
   z-index: 15;
@@ -13711,6 +13711,426 @@ textarea {
   height: 100%;
   position: relative;
 }
+.box-activities .wrap-activities .activities-app {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  z-index: 10;
+}
+.box-activities .wrap-activities .activities-app .activities-slider-first {
+  width: 100%;
+  height: 100%;
+}
+.box-activities .wrap-activities .activities-app .activities-slider-first .carousel {
+  width: 100%;
+  height: 100%;
+  position: static;
+}
+.box-activities .wrap-activities .activities-app .activities-slider-first .carousel .carousel-inner {
+  width: 82%;
+  height: 100%;
+}
+.box-activities .wrap-activities .activities-app .activities-slider-first .carousel .carousel-inner .carousel-item {
+  width: 100%;
+  height: 100%;
+}
+.box-activities .wrap-activities .activities-app .activities-slider-first .carousel .carousel-inner .carousel-item .activities-item {
+  width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-direction: row;
+  -moz-flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  -webkit-flex-wrap: nowrap;
+  -moz-flex-wrap: nowrap;
+  -ms-flex-wrap: nowrap;
+  flex-wrap: nowrap;
+  -webkit-align-items: center;
+  -moz-align-items: center;
+  -ms-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-justify-content: center;
+  -moz-justify-content: center;
+  -ms-justify-content: center;
+  justify-content: center;
+  -ms-flex-pack: center;
+  margin: auto;
+}
+.box-activities .wrap-activities .activities-app .activities-slider-first .carousel .carousel-inner .carousel-item .activities-item .image-item img {
+  width: 100%;
+  height: auto;
+}
+.box-activities .wrap-activities .activities-app .activities-slider-first .carousel .carousel-inner .carousel-item .activities-item .image-app {
+  text-align: center;
+}
+.box-activities .wrap-activities .activities-app .activities-slider-first .carousel .carousel-inner .carousel-item .activities-item .image-app img {
+  width: 100%;
+  height: auto;
+  max-width: 200px;
+}
+.box-activities .wrap-activities .activities-app .activities-slider-first .carousel .carousel-inner .carousel-item .activities-item .title {
+  text-align: center;
+  font-family: IRANSans;
+  font-size: 1.7rem;
+  color: #fff;
+  font-weight: 500;
+  line-height: 2.3rem;
+  margin-bottom: 40px;
+}
+@media screen and (max-width: 992px) {
+  .box-activities .wrap-activities .activities-app .activities-slider-first .carousel .carousel-inner .carousel-item .activities-item .title {
+    font-size: 1.4rem;
+    color: #fff;
+    font-weight: 500;
+    line-height: 2rem;
+  }
+}
+.box-activities .wrap-activities .activities-app .activities-slider-first .carousel .carousel-inner .carousel-item .activities-item .caption {
+  text-align: justify;
+  font-size: 1rem;
+  color: #fff;
+  font-weight: 500;
+  line-height: 1.7rem;
+}
+.box-activities .wrap-activities .activities-app .activities-slider-first .carousel .carousel-inner .carousel-item .activities-item .activities-buttons {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-direction: row;
+  -moz-flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  -webkit-flex-wrap: nowrap;
+  -moz-flex-wrap: nowrap;
+  -ms-flex-wrap: nowrap;
+  flex-wrap: nowrap;
+  -webkit-align-items: center;
+  -moz-align-items: center;
+  -ms-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-justify-content: center;
+  -moz-justify-content: center;
+  -ms-justify-content: center;
+  justify-content: center;
+  -ms-flex-pack: center;
+}
+.box-activities .wrap-activities .activities-app .activities-slider-first .carousel .carousel-inner .carousel-item .activities-item .activities-buttons .activities-btn {
+  background-color: #988db5;
+  padding: 10px 25px;
+  border: 1px solid #fff;
+  color: #fff;
+  margin: 5px 10px;
+  min-width: 120px;
+  -webkit-border-radius: 30px;
+  -moz-border-radius: 30px;
+  border-radius: 30px;
+}
+.box-activities .wrap-activities .activities-app .activities-slider-first .carousel .square-number {
+  position: absolute;
+  left: 0;
+  top: 10%;
+  width: 80px;
+  height: 80px;
+  background-color: #0c5460;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  border-radius: 20px;
+  -moz-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+.box-activities .wrap-activities .activities-app .activities-slider-first .carousel .carousel-indicators {
+  height: 100%;
+  margin: 0;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-direction: column;
+  -moz-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-flex-wrap: nowrap;
+  -moz-flex-wrap: nowrap;
+  -ms-flex-wrap: nowrap;
+  flex-wrap: nowrap;
+  -webkit-align-items: center;
+  -moz-align-items: center;
+  -ms-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-justify-content: center;
+  -moz-justify-content: center;
+  -ms-justify-content: center;
+  justify-content: center;
+  -ms-flex-pack: center;
+}
+.box-activities .wrap-activities .activities-app .activities-slider-first .carousel .carousel-indicators li {
+  -webkit-transition: all 0.3s;
+  -moz-transition: all 0.3s;
+  -ms-transition: all 0.3s;
+  -o-transition: all 0.3s;
+  transition: all 0.3s;
+  opacity: 1;
+  border-right: 4px solid #aeaeae;
+  border-bottom: 0px solid #aeaeae;
+  border-top: 0px solid #aeaeae;
+  height: 60px;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-direction: column;
+  -moz-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-flex-wrap: nowrap;
+  -moz-flex-wrap: nowrap;
+  -ms-flex-wrap: nowrap;
+  flex-wrap: nowrap;
+  -webkit-align-items: center;
+  -moz-align-items: center;
+  -ms-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-justify-content: center;
+  -moz-justify-content: center;
+  -ms-justify-content: center;
+  justify-content: center;
+  -ms-flex-pack: center;
+}
+.box-activities .wrap-activities .activities-app .activities-slider-first .carousel .carousel-indicators li.active {
+  border-right: 4px solid #191d48;
+}
+.box-activities .wrap-activities .activities-app.hidden {
+  display: none;
+}
+.box-activities .wrap-activities .activities-property {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  z-index: 10;
+  text-align: center;
+  padding: 5px;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-direction: column;
+  -moz-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-flex-wrap: nowrap;
+  -moz-flex-wrap: nowrap;
+  -ms-flex-wrap: nowrap;
+  flex-wrap: nowrap;
+  -webkit-align-items: center;
+  -moz-align-items: center;
+  -ms-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-justify-content: center;
+  -moz-justify-content: center;
+  -ms-justify-content: center;
+  justify-content: center;
+  -ms-flex-pack: center;
+}
+.box-activities .wrap-activities .activities-property .head-property {
+  -webkit-animation-delay: 0.2s;
+  -webkit-animation-duration: 0.7s;
+  /*-webkit-animation-name: $animation;*/
+  -webkit-animation-fill-mode: both;
+  /* this prevents the animation from restarting! */
+  -moz-animation-delay: 0.2s;
+  -moz-animation-duration: 0.7s;
+  /*  -moz-animation-name: $animation;*/
+  -moz-animation-fill-mode: both;
+  /* this prevents the animation from restarting! */
+  -o-animation-delay: 0.2s;
+  -o-animation-duration: 0.7s;
+  /* -o-animation-name: $animation;*/
+  -o-animation-fill-mode: both;
+  /* this prevents the animation from restarting! */
+  animation-delay: 0.2s;
+  animation-duration: 0.7s;
+  /*  animation-name: $animation;*/
+  animation-fill-mode: both;
+  /* this prevents the animation from restarting! */
+}
+.box-activities .wrap-activities .activities-property .head-property .image-property img {
+  width: 100%;
+  height: auto;
+  max-width: 100px;
+}
+.box-activities .wrap-activities .activities-property .head-property .title {
+  text-align: center;
+  font-family: IRANSans;
+  font-size: 1.7rem;
+  color: #fff;
+  font-weight: 500;
+  line-height: 2.3rem;
+  margin: 15px 0;
+}
+@media screen and (max-width: 992px) {
+  .box-activities .wrap-activities .activities-property .head-property .title {
+    font-size: 1.4rem;
+    color: #fff;
+    font-weight: 500;
+    line-height: 2rem;
+  }
+}
+.box-activities .wrap-activities .activities-property .head-property .installation {
+  font-size: 0.9rem;
+  color: #ff95cf;
+  font-weight: 500;
+  line-height: 1.5rem;
+  margin-bottom: 40px;
+}
+.box-activities .wrap-activities .activities-property .box-pack-property {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-direction: column;
+  -moz-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-flex-wrap: nowrap;
+  -moz-flex-wrap: nowrap;
+  -ms-flex-wrap: nowrap;
+  flex-wrap: nowrap;
+  -webkit-align-items: center;
+  -moz-align-items: center;
+  -ms-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-justify-content: space-between;
+  -moz-justify-content: space-between;
+  -ms-justify-content: space-between;
+  justify-content: space-between;
+  -ms-flex-pack: space-between;
+  -webkit-animation-delay: 0.7s;
+  -webkit-animation-duration: 1s;
+  /*-webkit-animation-name: $animation;*/
+  -webkit-animation-fill-mode: both;
+  /* this prevents the animation from restarting! */
+  -moz-animation-delay: 0.7s;
+  -moz-animation-duration: 1s;
+  /*  -moz-animation-name: $animation;*/
+  -moz-animation-fill-mode: both;
+  /* this prevents the animation from restarting! */
+  -o-animation-delay: 0.7s;
+  -o-animation-duration: 1s;
+  /* -o-animation-name: $animation;*/
+  -o-animation-fill-mode: both;
+  /* this prevents the animation from restarting! */
+  animation-delay: 0.7s;
+  animation-duration: 1s;
+  /*  animation-name: $animation;*/
+  animation-fill-mode: both;
+  /* this prevents the animation from restarting! */
+}
+.box-activities .wrap-activities .activities-property .box-pack-property .pack-property {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-direction: row;
+  -moz-flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  -webkit-flex-wrap: nowrap;
+  -moz-flex-wrap: nowrap;
+  -ms-flex-wrap: nowrap;
+  flex-wrap: nowrap;
+  -webkit-align-items: center;
+  -moz-align-items: center;
+  -ms-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-justify-content: center;
+  -moz-justify-content: center;
+  -ms-justify-content: center;
+  justify-content: center;
+  -ms-flex-pack: center;
+}
+.box-activities .wrap-activities .activities-property .box-pack-property .pack-property .text-property .title {
+  font-size: 1rem;
+  color: #fff;
+  font-weight: 500;
+  line-height: 1.8rem;
+}
+.box-activities .wrap-activities .activities-property .box-pack-property .pack-property .text-property .explain {
+  font-family: IRANSans_light;
+  font-size: 0.8rem;
+  color: #dddfe6;
+  font-weight: 300;
+  line-height: 1.7rem;
+}
+.box-activities .wrap-activities .activities-property .box-pack-property .pack-property .icon-body-property img {
+  max-width: 150px;
+  width: 100%;
+  height: auto;
+}
+.box-activities .wrap-activities .activities-property .image-body-property {
+  -webkit-animation-delay: 0.7s;
+  -webkit-animation-duration: 1s;
+  /*-webkit-animation-name: $animation;*/
+  -webkit-animation-fill-mode: both;
+  /* this prevents the animation from restarting! */
+  -moz-animation-delay: 0.7s;
+  -moz-animation-duration: 1s;
+  /*  -moz-animation-name: $animation;*/
+  -moz-animation-fill-mode: both;
+  /* this prevents the animation from restarting! */
+  -o-animation-delay: 0.7s;
+  -o-animation-duration: 1s;
+  /* -o-animation-name: $animation;*/
+  -o-animation-fill-mode: both;
+  /* this prevents the animation from restarting! */
+  animation-delay: 0.7s;
+  animation-duration: 1s;
+  /*  animation-name: $animation;*/
+  animation-fill-mode: both;
+  /* this prevents the animation from restarting! */
+}
+.box-activities .wrap-activities .activities-property .image-body-property img {
+  width: 100%;
+  height: auto;
+}
+.box-activities .wrap-activities .activities-property .wrap-back-button {
+  position: absolute;
+  top: 80px;
+  left: 80px;
+}
+.box-activities .wrap-activities .activities-property .wrap-back-button .back-button {
+  width: 50px;
+  height: 50px;
+  background-color: #ffffff40;
+  color: #fff;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  border-radius: 50%;
+}
+.box-activities .wrap-activities .activities-property.hidden {
+  display: none;
+}
 .box-activities .wrap-activities .background-activities {
   text-align: left;
   direction: ltr;
@@ -13718,9 +14138,27 @@ textarea {
   width: 100%;
   height: 100%;
   bottom: 0;
-  left: 10%;
+  left: 7%;
+  z-index: 1;
+  -webkit-transition: all 0.3s;
+  -moz-transition: all 0.3s;
+  -ms-transition: all 0.3s;
+  -o-transition: all 0.3s;
+  transition: all 0.3s;
 }
 .box-activities .wrap-activities .background-activities svg {
+  height: 100%;
+}
+.box-activities .wrap-activities .background-activities.click-item {
+  text-align: left;
+  direction: ltr;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  bottom: 0;
+  left: -27px;
+}
+.box-activities .wrap-activities .background-activities.click-item svg {
   height: 100%;
 }
 
@@ -13856,6 +14294,37 @@ textarea {
   width: 100%;
   height: auto;
   max-width: 30px;
+}
+.connection .image {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-direction: row;
+  -moz-flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  -webkit-flex-wrap: nowrap;
+  -moz-flex-wrap: nowrap;
+  -ms-flex-wrap: nowrap;
+  flex-wrap: nowrap;
+  -webkit-align-items: center;
+  -moz-align-items: center;
+  -ms-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-justify-content: center;
+  -moz-justify-content: center;
+  -ms-justify-content: center;
+  justify-content: center;
+  -ms-flex-pack: center;
+  width: 100%;
+  height: 100%;
+}
+.connection .image img {
+  width: 100%;
+  height: auto;
 }
 
 /*# sourceMappingURL=style.css.map */
