--- a/assets/sass/_connection.scss
+++ b/assets/sass/_connection.scss
@@ -40,4 +40,13 @@
 }
     }
   }
+  .image{
+    @include flex(row, nowrap, center,center);
+    width: 100%;
+    height: 100%;
+    img{
+      width: 100%;
+      height:auto;
+    }
+  }
 }
