--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -5,6 +5,7 @@
 @import "mixins";
 @import "variable";
 @import "animate";
+@import "owlCarousel";
 @import "particular";
 @import "full-page";
 @import "public";
