--- a/assets/sass/_connection.scss
+++ b/assets/sass/_connection.scss
@@ -8,7 +8,7 @@
   .connection-box{
     color: #fff;
 .connection-title{
-  font-family: IRANSans_bold;
+  font-family: IRANSans;
   @include font-source-sans(2rem, #fff, 900, 2.5rem);
   margin-bottom: 40px;
 }
