--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13978,7 +13978,19 @@ textarea {
   justify-content: center;
   -ms-flex-pack: center;
 }
-.box-activities .wrap-activities .activities-app .activities-slider-first .carousel .carousel-inner .carousel-item .activities-item .image-item img {
+.box-activities .wrap-activities .activities-app .activities-slider-first .carousel .carousel-inner .carousel-item .activities-item .box-image-item {
+  position: relative;
+}
+.box-activities .wrap-activities .activities-app .activities-slider-first .carousel .carousel-inner .carousel-item .activities-item .box-image-item .image-item-background img {
+  width: 100%;
+  height: auto;
+}
+.box-activities .wrap-activities .activities-app .activities-slider-first .carousel .carousel-inner .carousel-item .activities-item .box-image-item .image-item {
+  position: absolute;
+  top: -20%;
+  right: 16px;
+}
+.box-activities .wrap-activities .activities-app .activities-slider-first .carousel .carousel-inner .carousel-item .activities-item .box-image-item .image-item img {
   width: 100%;
   height: auto;
 }
@@ -14326,6 +14338,11 @@ textarea {
   -ms-justify-content: center;
   justify-content: center;
   -ms-flex-pack: center;
+  margin-bottom: 30px;
+}
+.box-activities .wrap-activities .activities-property .box-pack-property .pack-property .text-property {
+  width: 310px;
+  padding: 0 10px;
 }
 .box-activities .wrap-activities .activities-property .box-pack-property .pack-property .text-property .title {
   font-size: 1rem;
@@ -14340,8 +14357,17 @@ textarea {
   font-weight: 300;
   line-height: 1.7rem;
 }
+.box-activities .wrap-activities .activities-property .box-pack-property .pack-property .icon-body-property {
+  background-color: #60bffc;
+  border: 2px solid #fff;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  border-radius: 50%;
+  padding: 20px;
+  margin: 5px;
+}
 .box-activities .wrap-activities .activities-property .box-pack-property .pack-property .icon-body-property img {
-  max-width: 150px;
+  max-width: 40px;
   width: 100%;
   height: auto;
 }
@@ -14454,11 +14480,23 @@ textarea {
   /*  animation-name: $animation;*/
   animation-fill-mode: both;
   /* this prevents the animation from restarting! */
+  padding: 50px 17% 0;
 }
-.box-activities .wrap-activities .activities-property .image-body-property img {
+.box-activities .wrap-activities .activities-property .image-body-property .box-image-item {
+  position: relative;
+}
+.box-activities .wrap-activities .activities-property .image-body-property .box-image-item .image-item-background img {
   width: 100%;
   height: auto;
-  max-width: 360px;
+}
+.box-activities .wrap-activities .activities-property .image-body-property .box-image-item .image-item {
+  position: absolute;
+  top: -20%;
+  right: 9px;
+}
+.box-activities .wrap-activities .activities-property .image-body-property .box-image-item .image-item img {
+  width: 100%;
+  height: auto;
 }
 .box-activities .wrap-activities .activities-property .wrap-back-button {
   position: absolute;
@@ -14589,7 +14627,7 @@ textarea {
   margin-bottom: 40px;
 }
 .box-activities .wrap-activities .activities-gallery .owl-carousel .item {
-  background-color: gray;
+  background-color: transparent;
   animation-duration: 1s !important;
 }
 .box-activities .wrap-activities .activities-gallery .owl-carousel .item .owl-image {
@@ -14618,15 +14656,73 @@ textarea {
   -ms-justify-content: center;
   justify-content: center;
   -ms-flex-pack: center;
+  padding: 10%;
+  -webkit-transition: padding 0.3s;
+  -moz-transition: padding 0.3s;
+  -ms-transition: padding 0.3s;
+  -o-transition: padding 0.3s;
+  transition: padding 0.3s;
+  min-height: 365px;
 }
 .box-activities .wrap-activities .activities-gallery .owl-carousel .item .owl-image img {
   text-align: center;
   width: 100%;
   height: auto;
-  max-width: 320px;
+  max-width: 250px;
 }
 .box-activities .wrap-activities .activities-gallery .owl-carousel .item .owl-box-text .owl-text {
   margin: 0;
+}
+.box-activities .wrap-activities .activities-gallery .owl-carousel .owl-item {
+  background-color: transparent;
+  -webkit-transition: padding 0.3s;
+  -moz-transition: padding 0.3s;
+  -ms-transition: padding 0.3s;
+  -o-transition: padding 0.3s;
+  transition: padding 0.3s;
+}
+.box-activities .wrap-activities .activities-gallery .owl-carousel .owl-item.center {
+  background: transparent url("../img/eslimi.svg") no-repeat center center;
+  background-size: contain;
+  -webkit-transition: padding 0.3s;
+  -moz-transition: padding 0.3s;
+  -ms-transition: padding 0.3s;
+  -o-transition: padding 0.3s;
+  transition: padding 0.3s;
+}
+.box-activities .wrap-activities .activities-gallery .owl-carousel .owl-item.center .owl-image {
+  width: 100%;
+  text-align: center;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-direction: column;
+  -moz-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-flex-wrap: nowrap;
+  -moz-flex-wrap: nowrap;
+  -ms-flex-wrap: nowrap;
+  flex-wrap: nowrap;
+  -webkit-align-items: center;
+  -moz-align-items: center;
+  -ms-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-justify-content: center;
+  -moz-justify-content: center;
+  -ms-justify-content: center;
+  justify-content: center;
+  -ms-flex-pack: center;
+  padding: 0%;
+}
+.box-activities .wrap-activities .activities-gallery .owl-carousel .owl-item.center .owl-image img {
+  text-align: center;
+  width: 100%;
+  height: auto;
+  max-width: 250px;
 }
 .box-activities .wrap-activities .activities-gallery .wrap-back-button {
   position: absolute;
