--- a/assets/sass/_slider.scss
+++ b/assets/sass/_slider.scss
@@ -26,8 +26,8 @@
         width: 100%;
         @include flex(row, nowrap, center, center);
         .side-slider-image{
-          width: 35%;
-          background-color: #fff;
+          width: 50%;
+          background-color: transparent;
           img{
           width: 100%;
             height: auto;
@@ -39,7 +39,16 @@
   bottom: 50px;
 }
     }
+    .carousel-item-next:not(.carousel-item-left),
+    .active.carousel-item-right {
+      transform: translateX(-100%);
+    }
+    .carousel-item-prev:not(.carousel-item-right),
+    .active.carousel-item-left {
+      transform: translateX(100%);
+    }
   }
+
 }
   }
 
