--- a/assets/sass/_activities.scss
+++ b/assets/sass/_activities.scss
@@ -23,7 +23,6 @@
           width: 100%;
           height: 100%;
           position: static;
-
           .carousel-inner {
             width: 82%;
             height: 100%;
@@ -48,11 +47,16 @@
                   }
 
                   .image-item {
-                    position: absolute;
-                    top: -20%;
-                    right: 16px;
+                    @include animation (.3s, 1.5s);
+                    width: 100%;
+                    text-align: center;
+                    @include flex(column, nowrap, center, center);
+                    @include transition(padding .3s);
+                    background: transparent url("../img/eslimi.svg") no-repeat center center;
+                    background-size: contain;
 
                     img {
+                      text-align: center;
                       width: 100%;
                       height: auto;
                     }
@@ -61,12 +65,13 @@
 
 
                 .image-app {
+                  @include animation (.6s, .70s);
                   text-align: center;
                   margin-bottom: 25px;
 
                   .side-image-app {
                     position: relative;
-                    padding: 8px;
+                    padding: 9px;
                     display: inline-block;
 
                     img {
@@ -74,27 +79,25 @@
                       height: auto;
                       max-width: 120px;
                     }
-
                     &::after {
                       content: '';
                       width: 30%;
                       height: 30%;
                       background-color: transparent;
-                      border-left: 4px solid #fff;
-                      border-bottom: 4px solid #fff;
+                      border-left: 3px solid #fff;
+                      border-bottom: 3px solid #fff;
                       position: absolute;
                       bottom: 0;
                       left: 0;
                       z-index: 12;
                     }
-
                     &::before {
                       content: '';
                       width: 30%;
                       height: 30%;
                       background-color: transparent;
-                      border-right: 4px solid #fff;
-                      border-bottom: 4px solid #fff;
+                      border-right: 3px solid #fff;
+                      border-bottom: 3px solid #fff;
                       position: absolute;
                       bottom: 0;
                       right: 0;
@@ -106,6 +109,7 @@
                 }
 
                 .title {
+                  @include animation (.6s, .70s);
                   text-align: center;
                   font-family: IRANSans;
                   @include font-source-sans(1.7rem, #fff, 500, 2.3rem);
@@ -116,19 +120,21 @@
                 }
 
                 .caption {
+                  @include animation (.7s, .70s);
                   text-align: justify;
                   @include font-source-sans(1rem, #fff, 500, 1.7rem);
                 }
 
                 .activities-buttons {
+                  @include animation (.8s, .70s);
                   @include flex(row, nowrap, center, center);
-                  margin-bottom: 30px;
+                  margin: 10%;
 
                   .activities-btn {
                     background-color: #988db5;
-                    padding: 10px 25px;
+                    padding: 8px 30px;
                     border: 1px solid #fff;
-                    color: #fff;
+                    @include font-source-sans(.9rem, #fff, 500, 1.7rem);
                     margin: 5px 10px;
                     min-width: 120px;
                     @include radius(30px);
@@ -171,6 +177,28 @@
             }
           }
         }
+
+        .carousel.carousel-fade {
+          .carousel-item {
+            opacity: 1;
+            transition-property: opacity;
+            transform: none;
+          }
+
+          .carousel-item.active,
+          .carousel-item-next.carousel-item-left,
+          .carousel-item-prev.carousel-item-right {
+            z-index: 1;
+            opacity: 1;
+          }
+
+          .active.carousel-item-left,
+          .active.carousel-item-right {
+            z-index: 0;
+            opacity: 1;
+            @include transition(0s 0s opacity);
+          }
+        }
       }
     }
 
@@ -193,13 +221,13 @@
         .image-property {
           .side-image-property {
             position: relative;
-            padding: 6px;
+            padding: 7px;
             display: inline-block;
 
             img {
               width: 100%;
               height: auto;
-              max-width: 100px;
+              max-width: 90px;
             }
 
             &::after {
@@ -207,8 +235,8 @@
               width: 30%;
               height: 30%;
               background-color: transparent;
-              border-left: 3px solid #fff;
-              border-bottom: 3px solid #fff;
+              border-left: 2px solid #fff;
+              border-bottom: 2px solid #fff;
               position: absolute;
               bottom: 0;
               left: 0;
@@ -220,8 +248,8 @@
               width: 30%;
               height: 30%;
               background-color: transparent;
-              border-right: 3px solid #fff;
-              border-bottom: 3px solid #fff;
+              border-right: 2px solid #fff;
+              border-bottom: 2px solid #fff;
               position: absolute;
               bottom: 0;
               right: 0;
@@ -234,16 +262,16 @@
         .title {
           text-align: center;
           font-family: IRANSans;
-          @include font-source-sans(1.7rem, #fff, 500, 2.3rem);
+          @include font-source-sans(1.3rem, #fff, 500, 2.3rem);
           margin: 15px 0;
           @include media-max($L) {
-            @include font-source-sans(1.4rem, #fff, 500, 2rem);
+            @include font-source-sans(1.1rem, #fff, 500, 2rem);
           }
         }
 
         .installation {
           @include font-source-sans(.9rem, #ff95cf, 500, 1.5rem);
-          margin-bottom: 40px;
+          margin-bottom: 25px;
         }
       }
 
@@ -296,6 +324,7 @@
 
           &:nth-child(4) {
             @include animation (1s, .7s);
+            margin-bottom: 0;
           }
         }
 
@@ -303,25 +332,19 @@
 
       .image-body-property {
         @include animation (.7s, 1s);
-        padding: 50px 17% 0;
+        padding: 25px 17% 0;
 
         .box-image-item {
-          position: relative;
-
-          .image-item-background {
-            img {
-              width: 100%;
-              height: auto;
-            }
-          }
-
           .image-item {
-            position: absolute;
-            top: -20%;
-            right: 9px;
-
+            width: 100%;
+            text-align: center;
+            @include flex(column, nowrap, center, center);
+            @include transition(padding .3s);
+            background: transparent url("../img/eslimi.svg") no-repeat center center;
+            background-size: contain;
 
             img {
+              text-align: center;
               width: 100%;
               height: auto;
             }
@@ -359,17 +382,18 @@
 
       .head-gallery {
         @include animation (.2s, .70s);
+        margin-top: 15px;
 
         .image-gallery {
           .side-image-gallery {
             position: relative;
-            padding: 6px;
+            padding: 7px;
             display: inline-block;
 
             img {
               width: 100%;
               height: auto;
-              max-width: 100px;
+              max-width: 90px;
             }
 
             &::after {
@@ -377,8 +401,8 @@
               width: 30%;
               height: 30%;
               background-color: transparent;
-              border-left: 3px solid #fff;
-              border-bottom: 3px solid #fff;
+              border-left: 2px solid #fff;
+              border-bottom: 2px solid #fff;
               position: absolute;
               bottom: 0;
               left: 0;
@@ -390,8 +414,8 @@
               width: 30%;
               height: 30%;
               background-color: transparent;
-              border-right: 3px solid #fff;
-              border-bottom: 3px solid #fff;
+              border-right: 2px solid #fff;
+              border-bottom: 2px solid #fff;
               position: absolute;
               bottom: 0;
               right: 0;
@@ -403,10 +427,10 @@
         .title {
           text-align: center;
           font-family: IRANSans;
-          @include font-source-sans(1.7rem, #fff, 500, 2.3rem);
+          @include font-source-sans(1.3rem, #fff, 500, 2.3rem);
           margin: 15px 0;
           @include media-max($L) {
-            @include font-source-sans(1.4rem, #fff, 500, 2rem);
+            @include font-source-sans(1.1rem, #fff, 500, 2rem);
           }
         }
 
@@ -416,57 +440,129 @@
         }
       }
 
-      .owl-carousel {
-        .item {
-          background-color: transparent;
-          animation-duration: 1s !important;
+      .owl-carousel-container {
+        @include animation (.7s, 1s);
+        padding-right: 1.3%;
+        padding-left: 1.3%;
+        @include media-max($L) {
+          padding-right: 2%;
+          padding-left: 2%;
+        }
 
-          .owl-image {
-            width: 100%;
-            text-align: center;
-            @include flex(column, nowrap, center, center);
-            padding: 10%;
-            @include transition(padding .3s);
-            min-height: 365px;
-            img {
-              text-align: center;
+        .owl-carousel {
+          .item {
+            background-color: transparent;
+            animation-duration: 1s !important;
+            min-height: 440px;
+            @include media-max($L) {
+              min-height: 440px;
+            }
+
+            .owl-image {
               width: 100%;
-              height: auto;
-              max-width: 250px;
+              text-align: center;
+              @include flex(column, nowrap, center, center);
+
+
+              img {
+                text-align: center;
+                width: 100%;
+                height: auto;
+                max-width: 300px;
+              }
+            }
+
+            .owl-box-text {
+              .owl-text {
+                @include animation (.3s, .7s);
+                @include font-source-sans(1rem, #fff, 500, 1.5rem);
+                display: none;
+                flex-basis: 100%;
+                align-items: center;
+                margin: 5px 10% 0;
+
+                &::before,
+                &::after {
+                  content: "";
+                  flex-grow: 1;
+                  background: #fff;
+                  height: 1px;
+                  font-size: 0px;
+                  line-height: 0px;
+                  margin: 0px 8px;
+                }
+              }
             }
           }
 
-          .owl-box-text {
+          .owl-item {
+            background-color: transparent;
+
             .owl-text {
-              margin: 0;
+              display: none;
             }
           }
-        }
 
-        .owl-item {
-          background-color: transparent;
-          @include transition(padding .3s);
-        }
+          .owl-item > div {
+            cursor: pointer;
+            @include transition(padding 0.7s ease);
+            padding: 0% 20%;
+          }
 
-        .owl-item.center {
-          background: transparent url("../img/eslimi.svg") no-repeat center center;
-          background-size: contain;
-          @include transition(padding .3s);
-          .owl-image {
-            width: 100%;
-            text-align: center;
-            @include flex(column, nowrap, center, center);
-            padding: 0%;
-            img {
-              text-align: center;
-              width: 100%;
-              height: auto;
-              max-width: 250px;
+          .owl-item.center > div {
+            background: transparent url("../img/eslimi.svg") no-repeat center center;
+            background-size: 80% auto;
+            cursor: auto;
+            @include transition(padding 0.7s ease);
+            padding: 0 0;
 
+            .owl-text {
+              display: flex;
             }
           }
+
+          .owl-nav {
+            @include media-max($X) {
+              display: none;
+            }
+
+            .owl-prev {
+              color: #fff;
+              position: absolute;
+              right: 0;
+              top: calc(50% - 75px);
+            }
+
+            .owl-next {
+              color: #fff;
+              position: absolute;
+              left: 0;
+              top: calc(50% - 75px);
+            }
+          }
+
+
+          /*        .owl-item.center {
+
+                    @include transition(padding .3s);
+                    .owl-image {
+                      width: 100%;
+                      text-align: center;
+                      @include flex(column, nowrap, center, center);
+                      padding: 0%;
+                      @include transition(padding .3s);
+                      img {
+                        text-align: center;
+                        width: 100%;
+                        height: auto;
+                        max-width: 250px;
+
+                      }
+                    }
+                  }*/
         }
       }
+
 
       .wrap-back-button {
         position: absolute;
