--- a/assets/sass/_public.scss
+++ b/assets/sass/_public.scss
@@ -4,7 +4,7 @@ html{
 margin: 0;
     font-family: IRANSans_light;
 position: relative;
-
+direction: rtl;
     header{
       position: fixed;
       top:0;
